# shuzixueyuan

./: .gitignore  README.md
code-1.0/applications/sample/wifi-iot/app/: BUILD.gn
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_03/: BUILD.gn  HelloWorld.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_04/: BUILD.gn  beeper_demo.c  beeper_music_demo.c  human_sensor.c  task_demo.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chapter_05/: BUILD.gn  human_sensor_light.c
code-1.0/applications/sample/wifi-iot/app/code_v2.0/chpater_04/: BUILD.gn  traffic_light_demo.c
code_v2.0/chapter_03/: HelloWorld.c
