static_library("humanDemo") {
    sources = [
    #        "traffic_light_demo.c"
    #        "task_demo.c"
    #        "beeper_demo.c"
    #        "beeper_music_demo.c"
#        "human_sensor.c"
        "human_sensor_light.c"

    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite"
    ]
}
